# least-action

./: .gitignore  MISSING_RESULTS_AUDIT.md  MISSING_VALUES.md  README.md  RESULTS_INSERTIONS.md  SUBMISSION_AUDIT.md  highlights.tex  manuscript.tex  manuscript_insert_discussion_benchmark.tex  manuscript_insert_external_validation_discussion.tex  manuscript_insert_external_validation_methods.tex  manuscript_insert_external_validation_results.tex  manuscript_insert_methods_norming.tex  manuscript_insert_results_norming.tex  pyproject.toml  references.bib  rejection_risk_report.md  reproduce_all.py  reproduce_core.py  reproduce_full.py  requirements.txt  schroder_2012.xls  scrape.py  supplement.tex  updated_rejection_risk_report.md
analyses/: central_chain_validation.py  external_koenig_robert_validation.py  false_positive_recovery.py  frozen_embedding_semantic.py  frozen_multisource_semantic_validation.py  german_norm_audit.py  independent_semantic_analysis.py  mixed_effects_validation.py  permutation_semantic_prior.py  presubmission_missing_results.py  secondary_semantic_predictor.py  sensitivity_action_parameters.py  severe_benchmark.py  submission_supplement.py  swow_de_validation.py
config/: model_config.yaml
data/: semantic_items_master.csv
docs/: stage1_results.md
outputs/: cv_rmse_by_condition.csv  cv_trial_rmse.csv  item_level_action_summary.csv  mixed_effects_validation.csv  model_comparison_summary.csv  model_comparison_trials.csv  model_selection_by_fold.csv  parameter_recovery.csv  permutation_semantic_prior.csv  permutation_semantic_prior_summary.json  (+9 more)
(+78 files in other folders)
